--- a/webpage/templates/salva/home.html
+++ b/webpage/templates/salva/home.html
@@ -9,7 +9,10 @@
         <div class="row">
             <div class="col-lg-12">
                 <br>
-                <h1 class="display-2 text-center text-white mt-4">Your happiness is my business</h1>
+                <br>
+                <br>
+                <h1 class="display-3 text-center text-white">Iron gate specialist</h1>
+                <p class="text-center text-white font-italic">Also painting indoors</p>
             </div>
         </div>
     </div>
@@ -23,7 +26,7 @@
             <p style="font-size:18px">Salvatore paints offers a professional exterior painting service in New York, we
                 have a service provision of high
                 quality and optimal performance, for its greater economy, comfort and availability of time.
-                Our company is the solution in the maintenance and painting of all types of gates.</p>
+                Our company is the solution in the maintenance and painting of all types of gates and interior painting as well.</p>
             <a class="btn btn-primary btn-lg" href="tel:+19179957183">Call Me! &raquo;</a>
             </p>
         </div>
